# LQROpenCV

./: .gitignore  README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: DetectionBasedTracker_jni.cpp  DetectionBasedTracker_jni.h  HandTracker.cpp  HandTracker.h  HandTracker_back.cpp  HandTracker_native.cpp
app/src/main/java/com/lqr/opencv/: FdActivity.java  HandActivity.java  MainActivity.java
app/src/main/java/com/lqr/opencv/tracker/: DetectionBasedTracker.java  HandTracker.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
opencvlibrary341/: CMakeLists.txt  build.gradle
opencvlibrary341/src/main/: AndroidManifest.xml
opencvlibrary341/src/main/java/org/opencv/android/: CameraBridgeViewBase.java  CameraGLSurfaceView.java  JavaCameraView.java
opencvlibrary341/src/main/res/values/: strings.xml
